2011-08-12  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (string-mark-left-to-right): Search the entire string
	for RTL script, not just the terminating character.  Doc fix.

2011-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/js.el (js-syntax-propertize, js-syntax-propertize-regexp):
	New function.
	(js--regexp-literal, js-syntax-propertize-function): Remove.
	(js-mode): Use js-syntax-propertize to handle multilines (bug#9183).
	(js-mode-map): Don't rebind electric keys.
	(js-insert-and-indent): Remove.
	(js-mode): Setup electric-layout and electric-indent instead.

	* epa-file.el (epa-file-select-keys): Revert to nil default (bug#9280).

2011-08-12  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa-progress-callback-function): Fix the logic of
	displaying progress.
	* epa-file.el (epa-file-insert-file-contents): Make progress
	display more user-friendly.
	(epa-file-write-region): Ditto.

2011-08-10  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (string-mark-left-to-right): New function.

	* buff-menu.el (Buffer-menu-buffer+size): Remove LRM argument.
	Use string-mark-left-to-right.
	(list-buffers-noselect): Caller changed.

	* emacs-lisp/tabulated-list.el (tabulated-list-print-entry):
	Use string-mark-left-to-right.
	(tabulated-list-print): Recenter after moving point.

2011-08-10  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (rgrep): Don't bind `process-connection-type'.
	This finishes incomplete reversion of 2011-06-30T01:09:13Z!larsi@gnus.org
	intended by 2011-07-06T15:49:19Z!larsi@gnus.org.

2011-08-09  Chong Yidong  <cyd@stupidchicken.com>

	* hi-lock.el (hi-lock-unface-buffer): Fix interactive spec
	(Bug#7554).

2011-08-09  Andreas Schwab  <schwab@linux-m68k.org>

	* xt-mouse.el (xterm-mouse-event-read): Try to recover the raw
	character.  (Bug#6594)

2011-08-08  Chong Yidong  <cyd@stupidchicken.com>

	* image-dired.el: Don't use find-file for temporary work (Bug#7895).
	(image-dired--with-db-file): New macro.