@@ -1,3 +1,7 @@
+2011-08-12  Juanma Barranquero  <lekktu@gmail.com>
+
+	* startup.el (argi): Declare as global variable (bug#9275).
+
 2011-08-12  Chong Yidong  <cyd@stupidchicken.com>
 
 	* subr.el (string-mark-left-to-right): Search the entire string
